         data in this class


--------------------------------------------------------------------------------
Recorder
   ### New Data Recorder project ###
   ### Using Google Protocol Buffers to serialize the data for binary files
       or network data streams ###


--------------------------------------------------------------------------------
simulation

   dataRecorderTokens.h -- new file -- Data recorder sample event tokens.

   Gimbal class
      1) Added the new 'earthRadius' slot and function 'getEarthRadius(), which
      define the radius used for earth masking of the line of sight to the target.

   Navigation class
      -- Fixed bug in calculating navigation UTC time

   Player class
      1) processComponents() -- calls Component::processComponents() instead of
      BaseClass::processComponents()

      2) initData() -- Player name defaults to nul string (e.g., "")

      3) added getEarthRadius() that returns the earth radius at the location
      of the player.

      4) added recorder data SAMPLES

   Route class
      1) Fixed bug in insertSteerpoint concerning position datatype

      2) various functions -- call Component::processComponents() instead of
      BaseClass::processComponents()

   Simulation class
      -- Added commas to last items in slot table (bug fix)

   Steerpoint class
      -- processComponents() -- calls Component::processComponents() instead of
      BaseClass::processComponents()

   Simulation class
      1) added recorder data SAMPLES
      2) getDataRecorder() -- new function

   Station class
      1) Added a new 'dataRecorder' slot and getDataRecorder() function

   Tdb class
      1) computeBoresightData() -- to decrease stack usage, the local arrays (xa,
      ya, za, ra, and ra2) are now member varaibles and dynamically allocated by
      resizeArrays()

      2) processPlayers() -- modified to use its Gimbal's earth radius

--------------------------------------------------------------------------------

